# yuri-crew

./: .env  .gitignore  PRD.md  README.md  debug_crew.py  pyproject.toml
output/: crew_execution.log.txt
src/yuri/: __init__.py  crew.py
src/yuri/config/: agents.yaml  tasks.yaml
src/yuri/tools/: __init__.py  file_tools.py
tests/: test_crew.py
yuri/: debug_llm.py  pyproject.toml  update_env.py
yuri/knowledge/: tech_stack_guidelines.md
yuri/src/yuri/: crew.py  main.py
