[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yuri"
version = "0.1.0"
description = "Multi-Agent Software Development Framework based on CrewAI"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "crewai[tools]>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
yuri = "yuri.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/yuri"]

[tool.crewai]
type = "crew"
